fixed send button and also added scroll functionality to message board for when it overflows

--- a/public/stylesheets/canvasStyles.css
+++ b/public/stylesheets/canvasStyles.css
@@ -41,30 +41,30 @@ form input {
 	color: #000;
 	border: 0;
 	padding: 10px;
-	width: 84%;
+	width: 78%;
 	border-bottom-left-radius: 2rem;
 	margin-top: 5px;
 }
 form button {
 	font-family: "Gill Sans";
 	color: #000;
-	width: 15%;
-	min-width: 50px;
+	width: 20%;
 	background: rgb(130, 224, 255);
 	border: none;
 	padding: 10px;
 	border-bottom-right-radius: 2rem;
-	margin-left: 1%;
+	margin-left: 2%;
 }
 #messages {
 	list-style-type: none;
 	margin: 0;
 	padding: 0;
-	height: 75vh;
+	height: 73.5vh;
   	background: #FFF;
   	color: #D0D0D0;
   	border-top-left-radius: 2rem;
 	border-top-right-radius: 2rem;
+	overflow: scroll;
 }
 #messages li {
 	font-family: "Gill Sans";
